--- a/index.html
+++ b/index.html
@@ -11,25 +11,14 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed" rel="stylesheet">
     <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/earlyaccess/mplus1p.css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/earlyaccess/nicomoji.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/earlyaccess/sawarabimincho.css" rel="stylesheet" />
     <title>新入生オリエンテーション</title>
-    <!-- jQuery読み込み -->
-    <script src="jquery-3.1.1.min.js"></script>
-    <script>
-        $(function() {
-            $('#navToggle').click(function() { //headerに .openNav を付加・削除
-                $('header').toggleClass('openNav');
-            });
-        });
-        $(function() {
-            $('nav').click(function() { //headerに .openNav を付加・削除
-                $('header').toggleClass('openNav');
-            });
-        });
-    </script>
-    <!-- モーダルウィンドウファイル読み込み -->
-
-    <script src="iziModal.min.js" type="text/javascript"></script>
+    <!-- CSS -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.0.5/remodal.min.css" rel="stylesheet" type="text/css" media="all" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.0.5/remodal-default-theme.min.css" rel="stylesheet" type="text/css" media="all" />
+    <!-- <script src="iziModal.min.js" type="text/javascript"></script>
     <link rel="stylesheet" href="iziModal.min.css">
 
     <script>
@@ -40,12 +29,13 @@
           });
           $('#modal-default').iziModal();
         });
-    </script>
+    </script> -->
 </head>
 
 
 <body>
     <div id="home">
+
         <header>
             <div id="navToggle">
                 <div>
@@ -59,7 +49,7 @@
                     <li><a href="#home">home</a></li>
                     <li><a href="#about">about</a></li>
                     <li><a href="#info">info</a></li>
-                    <li><a href="#stuff">stuff</a></li>
+                    <li><a href="#staff">staff</a></li>
                     <li><a href="#twitter">twitter</a></li>
                 </ul>
             </nav>
@@ -104,58 +94,193 @@
                     <li>動きやすい普段着</li>
                     <li>昼食</li>
                     <li>筆記用具</li>
-                  </p>
+                </p>
 
 
             </div>
         </div>
         <div class="background-info">
         </div>
-        <div id="stuff">
-            <h1>STUFF</h1>
-            <div class="stuff-intro">
+        <div id="staff">
+            <h1>STAFF</h1>
+            <div class="staff-intro">
 
-                  <button class="ibunka open-default button">
-                    <img class="human" src="170226_0530-01.png" alt="">
-                </button>
-                <div id="modal-default">
-                    <div class="close">
-                        <a data-izimodal-close="">×</a>
-                    </div>
-                    <p>このモーダルウィンドウはデフォルト設定です</p>
+
+                <div class="ibunka">
+                    <a href="#ibunka-window">
+                        <img class="human" src="170226_0530-01.png" alt="">
+                        <p class="btn btn-default">イブンカ</p>
+                    </a>
                 </div>
+
+                <!--　呼び出し用のボタン -->
+                <!--  data-remodal-id="modal"が呼び出される -->
+
+
+                <!-- Modal本体 -->
+                <!-- ボタンが押されると呼び出される -->
+                <div class="remodal" data-remodal-id="ibunka-window">
+                    <!-- クローズボタン -->
+                    <button data-remodal-action="close" class="remodal-close"></button>
+                    <h1>Remodal</h1>
+                    <!-- your content -->
+                    <p>
+                        Remodalテスト
+                    </p>
+                    <p>
+                        Write something.
+                    </p>
+                    <br>
+
+                </div>
+
+
                 <div class="tiiki">
-                    <img class="human" src="170226_0530-01.png" alt="">
+                    <a href="#tiiki-window">
+                        <img class="human" src="170226_0530-01.png" alt="">
+                        <p class="btn btn-default">チイキ</p>
+                    </a>
                 </div>
+
+
+                <!-- ボタンが押されると呼び出される -->
+                <div class="remodal" data-remodal-id="tiiki-window">
+                    <!-- クローズボタン -->
+                    <button data-remodal-action="close" class="remodal-close"></button>
+                    <h1>Remodal</h1>
+                    <!-- your content -->
+                    <p>
+                        Remodalテスト
+                    </p>
+                    <p>
+                        Write something.
+                    </p>
+                    <br>
+
+                </div>
+
+
                 <div class="jyokomyu">
-                    <img class="human" src="170226_0530-01.png" alt="">
+                    <a href="#jyokomyu-window">
+                        <img class="human" src="170226_0530-01.png" alt="">
+                        <p class="btn btn-default">ジョウコミュ</p>
+                    </a>
                 </div>
+
+                <!-- ボタンが押されると呼び出される -->
+                <div class="remodal" data-remodal-id="jyokomyu-window">
+                    <!-- クローズボタン -->
+                    <button data-remodal-action="close" class="remodal-close"></button>
+                    <h1>Remodal</h1>
+                    <!-- your content -->
+                    <p>
+                        Remodalテスト
+                    </p>
+                    <p>
+                        Write something.
+                    </p>
+                    <br>
+
+                </div>
+
                 <div class="gendai">
-                    <img class="human" src="170226_0530-01.png" alt="">
+                    <a href="#gendai-window">
+                        <img class="human" src="170226_0530-01.png" alt="">
+                        <p class="btn btn-default">ゲンダイ</p>
+                    </a>
                 </div>
+                <!-- ボタンが押されると呼び出される -->
+                <div class="remodal" data-remodal-id="gendai-window">
+                    <!-- クローズボタン -->
+                    <button data-remodal-action="close" class="remodal-close"></button>
+                    <h1>Remodal</h1>
+                    <!-- your content -->
+                    <p>
+                        Remodalテスト
+                    </p>
+                    <p>
+                        Write something.
+                    </p>
+                    <br>
+
+                </div>
+
             </div>
 
         </div>
-        <div class="background-stuff">
+        <div class="background-staff">
         </div>
         <div id="twitter">
-            <h1>TWITTER</h1>
-            <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/search?q=%20%E7%A5%9E%E5%A4%A7%E3%80%80%E5%9B%BD%E6%96%87" data-widget-id="835745564700508160"> 神大　国文に関するツイート</a>
-            <script>
-                ! function(d, s, id) {
-                    var js, fjs = d.getElementsByTagName(s)[0],
-                        p = /^http:/.test(d.location) ? 'http' : 'https';
-                    if (!d.getElementById(id)) {
-                        js = d.createElement(s);
-                        js.id = id;
-                        js.src = p + "://platform.twitter.com/widgets.js";
-                        fjs.parentNode.insertBefore(js, fjs);
-                    }
-                }(document, "script", "twitter-wjs");
-            </script>
+            <h1><img src="icon_002252_48.png"></img></h1>
+            <div class="twitter-box">
+                <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/search?q=%20%E7%A5%9E%E5%A4%A7%E3%80%80%E5%9B%BD%E6%96%87" data-widget-id="835745564700508160"> 神大　国文に関するツイート</a>
+                <script>
+                    ! function(d, s, id) {
+                        var js, fjs = d.getElementsByTagName(s)[0],
+                            p = /^http:/.test(d.location) ? 'http' : 'https';
+                        if (!d.getElementById(id)) {
+                            js = d.createElement(s);
+                            js.id = id;
+                            js.src = p + "://platform.twitter.com/widgets.js";
+                            fjs.parentNode.insertBefore(js, fjs);
+                        }
+                    }(document, "script", "twitter-wjs");
+                </script>
+            </div>
         </div>
 
 
+        <!-- jQuery読み込み -->
+        <script src="jquery-3.1.1.min.js"></script>
+        <script>
+            // ランダム画像表示のjQuery
+            // $(window).ready(function(){
+            //   var rand = Math.floor(Math.random()*2);
+            //   console.log(rand);
+            //   switch(rand){
+            //     case 0:
+            //       $('#home').css('background-image','url(bgimg01.jpg)');
+            //       console.log($('#home').css('background-image'));
+            //       console.log('test1');
+            //       break;
+            //     case 1:
+            //       $('#home').css('background-image','url(bgimg02.jpg)');
+            //       console.log($('#home').css('background-image'));
+            //       console.log('test2');
+            //       break;
+            //     default:
+            //       $('#home').css('background-image', 'bgimg01.jpg');
+            //       break;
+            //   }
+            // })
+
+            // ハンバーガメニュー
+            $(function() {
+                $('#navToggle').click(function() { //headerに .openNav を付加・削除
+                    $('header').toggleClass('openNav');
+                });
+            });
+            $(function() {
+                $('nav').click(function() { //headerに .openNav を付加・削除
+                    $('header').toggleClass('openNav');
+                });
+            });
+        </script>
+
+
+      // 背景のスライドショー
+      <script src="jquery.backstretch.min.js"></script>
+      <script>
+        $('#home').backstretch([
+          "bgimg01.jpg",
+          "bgimg02.jpg",
+          "bgimg03.jpg"
+        ], {duration: 3000, fade: 2000});
+      </script>
+
+        <!-- javascript -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.0.5/remodal.min.js" type="text/javascript"></script>
+        <!-- モーダルウィンドウファイル読み込み -->
 
 </body>
 
