モーダルウィンドウが動かないです

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- FontAwesomeの読み込み -->
     <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
-    <!-- CSS -->
+    <!-- CSS モーダルウィンドウ-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.0.5/remodal.min.css" rel="stylesheet" type="text/css" media="all" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.0.5/remodal-default-theme.min.css" rel="stylesheet" type="text/css" media="all" />
     <!-- <script src="iziModal.min.js" type="text/javascript"></script>
@@ -57,8 +57,8 @@
             </nav>
         </header>
         <div class="appear home_box">
-        <p class="word1 appear">shinori</p>
-        <p class="word2 appear">2017.05.20</p>
+            <p class="word1 appear">shinori</p>
+            <p class="word2 appear">2017.05.20</p>
         </div>
 
     </div>
@@ -91,12 +91,12 @@
             </div>
             <div class="bag">
                 <h3>持ち物・服装</h3>
-                <p>
-                    <li>体育館シューズ</li>
-                    <li>動きやすい普段着</li>
+                <ul>
+                    <li>体育館<br>シューズ</li>
+                    <li>動きやすい<br>普段着</li>
                     <li>昼食</li>
                     <li>筆記用具</li>
-                </p>
+                </ul>
 
 
             </div>
@@ -110,7 +110,7 @@
 
                 <div class="ibunka">
                     <a href="#ibunka-window">
-                        <img class="human" src="170226_0530-01.png" alt="">
+                        <img class="human" src="ibunka_pic-01.png" alt="">
                         <p class="btn btn-default">イブンカ</p>
                     </a>
                 </div>
@@ -126,20 +126,25 @@
                     <button data-remodal-action="close" class="remodal-close"></button>
                     <h1>Remodal</h1>
                     <!-- your content -->
-                    <p>
-                        Remodalテスト
-                    </p>
-                    <p>
-                        Write something.
-                    </p>
-                    <br>
+                    <div class="member">
+                        <img src="staff_pic/ryosuke-01.png" alt="">
+                        <p>①涼介<br>②Truss<br>③野球観戦、旅</p>
+                    </div>
+                    <div class="member">
+                        <img src="staff_pic/sakakura-01.png" alt="">
+                        <p>①こーすけ<br>②なし<br>③読書</p>
+                    </div>
+                    <div class="member">
+                        <img src="staff_pic/tanaharu.png" alt="">
+                        <p>①たなはる<br>②ESS<br>③旅行</p>
+                    </div>
 
                 </div>
 
 
                 <div class="tiiki">
                     <a href="#tiiki-window">
-                        <img class="human" src="170226_0530-01.png" alt="">
+                        <img class="human" src="tiiki_pic-01.png" alt="">
                         <p class="btn btn-default">チイキ</p>
                     </a>
                 </div>
@@ -151,13 +156,21 @@
                     <button data-remodal-action="close" class="remodal-close"></button>
                     <h1>Remodal</h1>
                     <!-- your content -->
-                    <p>
-                        Remodalテスト
-                    </p>
-                    <p>
-                        Write something.
-                    </p>
-                    <br>
+
+                    <div class="member">
+                        <img src="staff_pic/minori-01.png" alt="">
+                        <p>①みのり<br>②GhannaGhanna、模擬国連<br>③音楽</p>
+                    </div>
+
+                    <div class="member">
+                        <img src="staff_pic/nao-01.png" alt="">
+                        <p>①つの<br>②東洋拳法、Truss<br>③突発的な遠出、読書、ラーメン</p>
+                    </div>
+
+                    <div class="member">
+                        <img src="staff_pic/minami-01.png" alt="">
+                        <p>①みなみん<br>②バレー部<br>③カラオケ(同志募集中)</p>
+                    </div>
 
                 </div>
 
@@ -175,19 +188,42 @@
                     <button data-remodal-action="close" class="remodal-close"></button>
                     <h1>Remodal</h1>
                     <!-- your content -->
-                    <p>
-                        Remodalテスト
-                    </p>
-                    <p>
-                        Write something.
-                    </p>
-                    <br>
+                    <div class="member">
+                        <img src="staff_pic/daito-01.png" alt="">
+                        <p>①だいと<br>②ESS<br>③ゲーム、ライブに行く</p>
+                    </div>
+
+                    <div class="member">
+                        <img src="staff_pic/nana-01.png" alt="">
+                        <p>①なな　バナナ<br>②なし<br>③音楽、お酒、ダーツ、パソコン</p>
+                    </div>
+
+                    <div class="member">
+                        <img src="staff_pic/syota-01.png" alt="">
+                        <p>①しょーた<br>②Truss<br>③お散歩</p>
+                    </div>
+
+                    <div class="member">
+                        <img src="staff_pic/yuka-01.png" alt="">
+                        <p>①ゆうか<br>②体育会ハンドボール部<br>③食べること、お酒を飲むこと</p>
+                    </div>
+
+                    <div class="member">
+                        <img src="staff_pic/karen-01.png" alt="">
+                        <p>①かれん<br>②フィールドホッケー部、TOPSPIN<br>③テニス、音楽、映画</p>
+                    </div>
+
+                    <div class="member">
+                        <img src="staff_pic/surane-01.png" alt="">
+                        <p>①すらねー<br>②神戸大学応援団総部吹奏楽部<br>③深夜ヒトカラ</p>
+                    </div>
+
 
                 </div>
 
                 <div class="gendai">
                     <a href="#gendai-window">
-                        <img class="human" src="170226_0530-01.png" alt="">
+                        <img class="human" src="gendai_pic-01.png" alt="">
                         <p class="btn btn-default">ゲンダイ</p>
                     </a>
                 </div>
@@ -197,13 +233,23 @@
                     <button data-remodal-action="close" class="remodal-close"></button>
                     <h1>Remodal</h1>
                     <!-- your content -->
-                    <p>
-                        Remodalテスト
-                    </p>
-                    <p>
-                        Write something.
-                    </p>
-                    <br>
+
+                    <div class="member">
+                        <img src="staff_pic/tamosan-01.png" alt="">
+                        <p>①たもさん②元GI③食べること、映画、写真</p>
+                    </div>
+
+                    <div class="member">
+                        <img src="staff_pic/mayu-01.png" alt="">
+                        <p>①やすかわま<br>②国文女子フードファイター部<br>③食とロックと野球とイケメン</p>
+                    </div>
+
+                    <div class="member">
+                        <img src="staff_pic/koni-01.png" alt="">
+                        <p>①こにー②Truss③写真、音楽、映画、どこかへ行く</p>
+                    </div>
+
+
 
                 </div>
 
@@ -213,7 +259,7 @@
         <div class="background-staff">
         </div>
         <div id="twitter">
-            <h1><img src="icon_002252_48.png"></img></h1>
+            <h1>TWITTER</img></h1>
             <div class="twitter-box">
                 <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/search?q=%20%E7%A5%9E%E5%A4%A7%E3%80%80%E5%9B%BD%E6%96%87" data-widget-id="835745564700508160"> 神大　国文に関するツイート</a>
                 <script>
