--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
     <!-- CSS モーダルウィンドウ-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.0.5/remodal.min.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.0.5/remodal-default-theme.min.css" rel="stylesheet" type="text/css" media="all" />
-
+    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.0.5/remodal-default-theme.min.css" rel="stylesheet" type="text/css" media="all" /> -->
+    <link rel="stylesheet" href="remodal.css" type="text/css">
     <title>新入生オリエンテーション</title>
 </head>
 
@@ -111,29 +111,40 @@
 
                 <!-- Modal本体 -->
                 <!-- ボタンが押されると呼び出される -->
-                <div class="remodal" data-remodal-id="ibunka-window">
+                <div class="remodal ibunka-remodal" data-remodal-id="ibunka-window">
                     <!-- クローズボタン -->
                     <button data-remodal-action="close" class="remodal-close"></button>
-                    <!-- <h1>Remodal</h1> -->
+
                     <!-- your content -->
                     <p class="question">
-                        ①あだ名②部活・サークル③趣味
+                        ①あだ名/②部活・サークル/③趣味
                     </p>
-                    <div class="member">
-                        <img src="staff_pic/ryosuke-01.png" alt="">
-                        <p>①涼介<br>②Truss<br>③野球観戦、旅</p>
-                    </div>
-                    <div class="member">
-                        <img src="staff_pic/sakakura-01.png" alt="">
-                        <p>①こーすけ<br>②なし<br>③読書</p>
-                    </div>
-                    <div class="member">
-                        <img src="staff_pic/tanaharu.png" alt="">
-                        <p>①たなはる<br>②ESS<br>③旅行</p>
-                    </div>
-                    <div class="member">
-                        <img src="staff_pic/hitomi-01.png" alt="">
-                        <p>ひとみ<br>②なし<br>③映画、音楽</p>
+
+                    <div class="memberBox">
+                        <div class="member">
+                          <div class="img_box">
+                            <img src="staff_pic/ryosuke-01.png" alt="">
+                            </div>
+                            <p>①涼介<br>②Truss<br>③野球観戦、旅</p>
+                        </div>
+                        <div class="member">
+                          <div class="img_box">
+                            <img src="staff_pic/sakakura-01.png" alt="">
+                            </div>
+                            <p>①こーすけ<br>②なし<br>③読書</p>
+                        </div>
+                        <div class="member">
+                          <div class="img_box">
+                            <img src="staff_pic/tanaharu.png" alt="">
+                            </div>
+                            <p>①たなはる<br>②ESS<br>③旅行</p>
+                        </div>
+                        <div class="member">
+                          <div class="img_box">
+                            <img src="staff_pic/hitomi-01.png" alt="">
+                            </div>
+                            <p>①ひとみ<br>②なし<br>③映画、音楽</p>
+                        </div>
                     </div>
 
 
@@ -149,28 +160,37 @@
 
 
                 <!-- ボタンが押されると呼び出される -->
-                <div class="remodal" data-remodal-id="tiiki-window">
+                <div class="remodal tiiki-remodal" data-remodal-id="tiiki-window">
                     <!-- クローズボタン -->
                     <button data-remodal-action="close" class="remodal-close"></button>
-                    <!-- <h1>Remodal</h1> -->
+
                     <!-- your content -->
                     <p class="question">
                         ①あだ名②部活・サークル③趣味
                     </p>
 
-                    <div class="member">
-                        <img src="staff_pic/minori-01.png" alt="">
-                        <p>①みのり<br>②GhannaGhanna、模擬国連<br>③音楽</p>
-                    </div>
+                    <div class="memberBox">
 
-                    <div class="member">
-                        <img src="staff_pic/nao-01.png" alt="">
-                        <p>①つの<br>②東洋拳法、Truss<br>③突発的な遠出、読書、ラーメン</p>
-                    </div>
+                        <div class="member">
+                          <div class="img_box">
+                            <img src="staff_pic/minori-01.png" alt="">
+                            </div>
+                            <p>①みのり<br>②GhannaGhanna、模擬国連<br>③音楽</p>
+                        </div>
 
-                    <div class="member">
-                        <img src="staff_pic/minami-01.png" alt="">
-                        <p>①みなみん<br>②バレー部<br>③カラオケ(同志募集中)</p>
+                        <div class="member">
+                          <div class="img_box">
+                            <img src="staff_pic/nao-01.png" alt="">
+                            </div>
+                            <p>①つの<br>②東洋拳法、Truss<br>③突発的な遠出、読書、ラーメン</p>
+                        </div>
+
+                        <div class="member">
+                          <div class="img_box">
+                            <img src="staff_pic/minami-01.png" alt="">
+                            </div>
+                            <p>①みなみん<br>②バレー部<br>③カラオケ(同志募集中)</p>
+                        </div>
                     </div>
 
                 </div>
@@ -184,7 +204,7 @@
                 </div>
 
                 <!-- ボタンが押されると呼び出される -->
-                <div class="remodal" data-remodal-id="jyokomyu-window">
+                <div class="remodal jyokomyu-remodal" data-remodal-id="jyokomyu-window">
                     <!-- クローズボタン -->
                     <button data-remodal-action="close" class="remodal-close"></button>
                     <!-- <h1>Remodal</h1> -->
@@ -193,44 +213,63 @@
                     <p class="question">
                         ①あだ名②部活・サークル③趣味
                     </p>
-                    <div class="member">
-                        <img src="staff_pic/daito-01.png" alt="">
-                        <p>①だいと<br>②ESS<br>③ゲーム、ライブに行く</p>
-                    </div>
 
-                    <div class="member">
-                        <img src="staff_pic/nana-01.png" alt="">
-                        <p>①なな　バナナ<br>②なし<br>③音楽、お酒、ダーツ、パソコン</p>
-                    </div>
+                    <div class="memberBox">
+                        <div class="member">
+                          <div class="img_box">
+                            <img src="staff_pic/daito-01.png" alt="">
+                            </div>
+                            <p>①だいと<br>②ESS<br>③ゲーム、ライブに行く</p>
+                        </div>
 
-                    <div class="member">
-                        <img src="staff_pic/syota-01.png" alt="">
-                        <p>①しょーた<br>②Truss<br>③お散歩</p>
-                    </div>
+                        <div class="member">
+                          <div class="img_box">
+                            <img src="staff_pic/nana-01.png" alt="">
+                            </div>
+                            <p>①なな　バナナ<br>②なし<br>③音楽、お酒、ダーツ、パソコン</p>
+                        </div>
 
-                    <div class="member">
-                        <img src="staff_pic/yuka-01.png" alt="">
-                        <p>①ゆうか<br>②体育会ハンドボール部<br>③食べること、お酒を飲むこと</p>
-                    </div>
+                        <div class="member">
+                          <div class="img_box">
+                            <img src="staff_pic/syota-01.png" alt="">
+                          </div>
+                            <p>①しょーた<br>②Truss<br>③お散歩</p>
+                        </div>
 
-                    <div class="member">
-                        <img src="staff_pic/kabani-01.png" alt="">
-                        <p>①かばーに<br>②ボナペティート<br>③カラオケ/元町徘徊</p>
-                    </div>
+                        <div class="member">
+                          <div class="img_box">
+                            <img src="staff_pic/yuka-01.png" alt="">
+                          </div>
+                            <p>①ゆうか<br>②体育会ハンドボール部<br>③食べること、お酒</p>
+                        </div>
 
-                    <div class="member">
-                        <img src="staff_pic/karen-01.png" alt="">
-                        <p>①かれん<br>②フィールドホッケー部、TOPSPIN<br>③テニス、音楽、映画</p>
-                    </div>
+                        <div class="member">
+                          <div class="img_box">
+                            <img src="staff_pic/kabani-01.png" alt="">
+                          </div>
+                            <p>①かばーに<br>②ボナペティート<br>③カラオケ/元町徘徊</p>
+                        </div>
 
-                    <div class="member">
-                        <img src="staff_pic/surane-01.png" alt="">
-                        <p>①すらねー<br>②神戸大学応援団総部吹奏楽部<br>③深夜ヒトカラ</p>
-                    </div>
+                        <div class="member">
+                          <div class="img_box">
+                            <img src="staff_pic/karen-01.png" alt="">
+                          </div>
+                            <p>①かれん<br>②フィールドホッケー部、TOPSPIN<br>③テニス、音楽、映画</p>
+                        </div>
 
-                    <div class="member">
-                        <img src="staff_pic/kana-01.png" alt="">
-                        <p>①かな<br>②101<br>③カラオケ</p>
+                        <div class="member">
+                          <div class="img_box">
+                            <img src="staff_pic/surane-01.png" alt="">
+                          </div>
+                            <p>①すらねー<br>②神戸大学応援団総部吹奏楽部<br>③深夜ヒトカラ</p>
+                        </div>
+
+                        <div class="member">
+                          <div class="img_box">
+                            <img src="staff_pic/kana-01.png" alt="">
+                          </div>
+                            <p>①かな<br>②101<br>③カラオケ</p>
+                        </div>
                     </div>
 
 
@@ -243,7 +282,7 @@
                     </a>
                 </div>
                 <!-- ボタンが押されると呼び出される -->
-                <div class="remodal" data-remodal-id="gendai-window">
+                <div class="remodal gendai-remodal" data-remodal-id="gendai-window">
                     <!-- クローズボタン -->
                     <button data-remodal-action="close" class="remodal-close"></button>
 
@@ -252,29 +291,43 @@
                         ①あだ名②部活・サークル③趣味
                     </p>
 
-                    <div class="member">
-                        <img src="staff_pic/tamosan-01.png" alt="">
-                        <p>①たもさん<br>②元GI<br>③食べること、映画、写真</p>
-                    </div>
+                    <div class="memberBox">
 
-                    <div class="member">
-                        <img src="staff_pic/mayu-01.png" alt="">
-                        <p>①やすかわま<br>②国文女子フードファイター部<br>③食とロックと野球とイケメン</p>
-                    </div>
+                        <div class="member">
+                          <div class="img_box">
+                            <img src="staff_pic/tamosan-01.png" alt="">
+                          </div>
+                            <p>①たもさん<br>②元GI<br>③食べること、映画、写真</p>
+                        </div>
 
-                    <div class="member">
-                        <img src="staff_pic/koni-01.png" alt="">
-                        <p>①こにー<br>②Truss<br>③写真、音楽、映画、どこかへ行く</p>
-                    </div>
+                        <div class="member">
+                          <div class="img_box">
+                            <img src="staff_pic/mayu-01.png" alt="">
+                          </div>
+                            <p>①やすかわま<br>②フードファイター部<br>③食とロックと野球とイケメン</p>
+                        </div>
 
-                    <div class="member">
-                        <img src="staff_pic/yukachan-01.png" alt="">
-                        <p>①ゆうちゃん<br>②体育会フットサル部<br>③カメラ</p>
-                    </div>
+                        <div class="member">
+                          <div class="img_box">
+                            <img src="staff_pic/koni-01.png" alt="">
+                          </div>
+                            <p>①こにー<br>②Truss<br>③写真、音楽、映画、どこかへ行く</p>
+                        </div>
 
-                    <div class="member">
-                        <img src="staff_pic/hanachan-01.png" alt="">
-                        <p>①はなちゃん<br>②広告研究会AdTAS<br>③写真・ピアノ</p>
+                        <div class="member">
+                          <div class="img_box">
+                            <img src="staff_pic/yukachan-01.png" alt="">
+                          </div>
+                            <p>①ゆうちゃん<br>②体育会フットサル部<br>③カメラ</p>
+                        </div>
+
+                        <div class="member">
+                          <div class="img_box">
+                            <img src="staff_pic/hanachan-01.png" alt="">
+                          </div>
+                            <p>①はなちゃん<br>②広告研究会AdTAS<br>③写真・ピアノ</p>
+                        </div>
+
                     </div>
 
                 </div>
@@ -301,6 +354,10 @@
                     }(document, "script", "twitter-wjs");
                 </script>
             </div>
+        </div>
+
+        <div class="creator">
+          <p>©️nana ushijima</p>
         </div>
 
 
