--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 
 <head>
     <meta charset="UTF-8">
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <!-- スマートフォン用css読み込み -->
     <link rel="stylesheet" href="smart.css" type="text/css" media="screen and (max-width: 800px)">
+    <!-- PC用css読み込み -->
+    <link rel="stylesheet" href="pc.css" type="text/css" media="screen and (min-width: 800px)">
     <!-- フォント読み込み -->
     <link href="https://fonts.googleapis.com/css?family=Ubuntu+Condensed" rel="stylesheet">
     <link href="https://fonts.googleapis.com/earlyaccess/notosansjapanese.css" rel="stylesheet" />
@@ -19,7 +21,6 @@
     <link href="font-awesome-4.7.0/css/font-awesome.css" rel="stylesheet">
     <!-- CSS モーダルウィンドウ-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.0.5/remodal.min.css" rel="stylesheet" type="text/css" media="all" />
-    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/remodal/1.0.5/remodal-default-theme.min.css" rel="stylesheet" type="text/css" media="all" /> -->
     <link rel="stylesheet" href="remodal.css" type="text/css">
     <title>新入生オリエンテーション</title>
 </head>
@@ -198,7 +199,7 @@
 
                 <div class="jyokomyu">
                     <a href="#jyokomyu-window">
-                        <img class="human" src="170226_0530-01.png" alt="">
+                        <img class="human" src="jyokomyu_pic-01.png" alt="">
                         <p class="btn btn-default">ジョウコミュ</p>
                     </a>
                 </div>
